# haskell-bits

./: README.md  ex_3.hs  example.cabal  home_works1_1.hs  home_works1_3.hs  lambda.hs  maths  maths.hs  types.hs
app/: Main.hs
chapter-5/: chapter-5.org
chapter-5/example/: example.cabal
chapter-5/example/app/: Main.hs
chapter-5/example/test/: Main.hs
effective-haskell/: chapter-5.org
haskell-programming/: README.md  chapter-1.org  chapter-2.org
learn-you-a-haskell/: learn-you-a-haskell.cabal  package.yaml
learn-you-a-haskell/test/: UnoSpec.hs
notes/haskell-programming/chapter-2/: hello.hs
old/: README.md  lambda.hs
old/haskell-programming/: chapter-1.org  chapter-2.org
old/l/chapter-1/: samples.hs
old/learn-you-a-haskell/: README.md  ex_3.hs  home_works1_2.hs  home_works1_6.hs  home_works1_7.hs  maths.hs  types.hs
old/learn-you-a-haskell/l/chapter-3/: chapter-3.hs
old/learn-you-a-haskell/learn-you-a-haskell/: learn-you-a-haskell.cabal  stack.yaml
old/learn-you-a-haskell/learn-you-a-haskell/test/: Chapter3Spec.hs
src/: Greetings.hs
tests/: DummySpec.hs
tests/AllAboutMonads/: ContainersSpec.hs  ExamplesSpec.hs  SheepsSpec.hs
tests/BookOfMonads/: Chapter1Spec.hs  Chapter2StateMonadSpec.hs  ContainersSpec.hs
