cabal-version:      3.8
name:               example
version:            0.1.0.0
description:        Sample project
license:            LGPL-3.0-or-later
license-file:       LICENSE
author:             Arialdo Martini
maintainer:         arialdo.martini@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   src
    exposed-modules:  Greetings
    build-depends:    base ^>=4.19.0.0

    default-language: Haskell2010

executable example
    import:           warnings
    hs-source-dirs:   app
    main-is:          Main.hs
    other-modules:
    build-depends:
        base ^>=4.19.0.0
      , example
    default-language: Haskell2010

test-suite example-test
    type:             exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs:   tests
    main-is:          Spec.hs
    ghc-options:      -Wall
    other-modules:
      DummySpec
      BookOfMonads.Chapter1Spec
      AllAboutMonads.SheepsSpec
      AllAboutMonads.ExamplesSpec
      BookOfMonads.ContainersSpec
    build-depends:
        example
      , mtl
      , containers
      , base ^>=4.19.0.0
      , cond
      , hspec==2.*
      , text==2.*
      , directory
      
    build-tool-depends: hspec-discover:hspec-discover == 2.*

