cabal-version:      3.0
name:               example
version:            0.1.0.0
description:        Sample project
license:            LGPL-3.0-or-later
license-file:       LICENSE
author:             Arialdo Martini
maintainer:         arialdo.martini@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable example
    import:           warnings
    main-is:          Main.hs
    other-modules:
    other-extensions:
    build-depends:    base ^>=4.19.0.0
                    , greeting
    hs-source-dirs:   app
    default-language: GHC2021

library greeting
    hs-source-dirs:   src/Greetings
    exposed-modules:  Greetings
    build-depends:    base ^>=4.19.0.0
