cabal-version:      3.0
name:               example
version:            0.1.0.0
description:        Sample project
license:            LGPL-3.0-or-later
license-file:       LICENSE
author:             Arialdo Martini
maintainer:         arialdo.martini@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable example
    import:           warnings
    main-is:          Main.hs
    other-modules:
    other-extensions:
    build-depends:    base ^>=4.19.0.0
                    , greeting
    hs-source-dirs:   app
    default-language: GHC2021

library greeting
    hs-source-dirs:   src/Greetings
    exposed-modules:  Greetings
    build-depends:    base ^>=4.19.0.0
    -- default-language is needed in , otherwise a warning (not an error!) will be emitted
    -- but the module will not be found.
    -- Warning: Packages using 'cabal-version: >= 1.10' and before 'cabal-version:
    -- 3.4' must specify the 'default-language' field for each component (e.g.
    -- Haskell98 or Haskell2010). If a component uses different languages in
    -- different modules then list the other ones in the 'other-languages' field.

    default-language: GHC2021
